# LowLatencyCryptoTrading

./: CMakeLists.txt  README.md  main.cpp
data_feed/: get_current_btc_price.py  historical_feed.py  live_predictor.py  lstm_btc_updown.pt  scaler_params.npy  test_lstm.py  train_lstm.py  websocket_feed.py
